module(name = "dmx-litraglow")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "prometheus-cpp", version = "1.3.0.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.1.0")

bazel_dep(name = "mjbots_rules_wix")
git_override(
    module_name = "mjbots_rules_wix",
    remote = "https://github.com/kleinpa/rules_wix",
    commit = "b0586e6ae2f7c9ca67bbf477d824c48855cc1930",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "hidapi",
    build_file = "@//thirdparty:hidapi.BUILD",
    sha256 = "",
    strip_prefix = "hidapi-hidapi-0.15.0",
    urls = ["https://github.com/libusb/hidapi/archive/refs/tags/hidapi-0.15.0.zip"],
)
http_archive(
    name = "etcpal",
    build_file = "@//thirdparty:etcpal-BUILD.bazel",
    sha256 = "066b3b5ea47a3970ca189457235becc8a178fa02b78056187fb7d0c73da35c1f",
    strip_prefix = "EtcPal-0aa91907b93f7969e712a1af126e7af84cba3707",
    urls = ["https://github.com/ETCLabs/etcpal/archive/0aa91907b93f7969e712a1af126e7af84cba3707.zip"],
)
http_archive(
    name = "sacn",
    build_file = "@//thirdparty:sacn-BUILD.bazel",
    sha256 = "",
    strip_prefix = "sACN-3.0.0",
    urls = ["https://github.com/ETCLabs/sACN/archive/refs/tags/v3.0.0.zip"],
)
http_archive(
    name = "util_linux",  # for libuuid
    build_file = "@//thirdparty:util-linux-BUILD.bazel",
    integrity = "sha256-sfWXrRcqLuF7Cnrkvnq34bGm+TlN29PY7JCuTtczNXk=",
    strip_prefix = "util-linux-2.39",
    urls = ["https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.39/util-linux-2.39.tar.gz"],
)
